fix mobile overflow

--- a/static/webFonts/webFonts.css
+++ b/static/webFonts/webFonts.css
@@ -23,12 +23,12 @@
 
 @font-face {
   font-family: 'Larsseit-Regular';
-  src: url('../webFonts/LarsseitRegular/font.woff2') format('woff2'),
-    url('../webFonts/LarsseitRegular/font.woff') format('woff');
+  src: url('/webFonts/LarsseitRegular/font.woff2') format('woff2'),
+    url('/webFonts/LarsseitRegular/font.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Larsseit-Light';
-  src: url('../webFonts/LarsseitLight/font.woff2') format('woff2'),
-    url('../webFonts/LarsseitLight/font.woff') format('woff');
+  src: url('/webFonts/LarsseitLight/font.woff2') format('woff2'),
+    url('/webFonts/LarsseitLight/font.woff') format('woff');
 }
